Fixed formatting bug with long Reactor names by making overflow hidden. Added image to Operations Per Second when in it's closed state.

--- a/platform/ui/styles/default.css
+++ b/platform/ui/styles/default.css
@@ -414,6 +414,7 @@ This is a duplicate of #reactor_config_content for now.
 
 .name {
 	width: 140px;
+	height: 20px;
 	overflow: hidden;
 	font-size: 12px;
 }
